// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse suggestions > dictionaryWithSuggestions 1`] = `
[
  "Begin",
  "~begin",
  "Begin+",
  "~begin+",
  "End",
  "~end",
  "+End",
  "~+end",
  "+Middle+",
  "~+middle+",
  "Café",
  "~café",
  "~cafe",
  "!forbid",
  "Begin",
  "~begin",
  "Begin+",
  "~begin+",
  "End",
  "~end",
  "+End",
  "~+end",
  "+Middle+",
  "~+middle+",
  "Café",
  "~café",
  "~cafe",
  "!forbid",
  "Geschäft",
  "~geschäft",
  "~geschaft",
  "resumé",
  "~resume",
  "Error",
  "~error",
  "Error+",
  "~error+",
  "+error",
  "+error+",
  "Code",
  "~code",
  "Code+",
  "~code+",
  "+code",
  "+code+",
  "msg",
  "+msg",
  "!err",
  "!Errorerror",
  "!Codemsg",
  "Café",
  "~café",
  "~cafe",
  "!codecode",
  ":word",
  ":word:0:suggestion1",
  ":word:1:suggestion2",
  "colour",
  ":colour",
  ":colour:0:color",
  "favourite",
  ":favourite",
  ":favourite:0:favorite",
  "!forbidden",
  ":forbidden",
  ":forbidden:0:suggested1",
  ":forbidden:1:suggested2",
  "!forbiddenA",
  ":forbiddenA",
  "~:forbiddena",
  ":forbiddenA:0:forbidden A",
  "~:forbiddena:0:forbidden a",
  ":forbiddenA:1:suggestion A",
  "~:forbiddena:1:suggestion a",
  "!forbiddenB",
  ":forbiddenB",
  "~:forbiddenb",
  ":forbiddenB:0:use B",
  "~:forbiddenb:0:use b",
  ":forbiddenB:1:suggestion BB",
  "~:forbiddenb:1:suggestion bb",
  "!forbiddenB",
  ":forbiddenB",
  "~:forbiddenb",
  ":forbiddenB:2:use A",
  "~:forbiddenb:2:use a",
]
`;

exports[`parse suggestions > dictionaryWithSuggestions disabled 1`] = `
[
  "Begin",
  "~begin",
  "Begin+",
  "~begin+",
  "End",
  "~end",
  "+End",
  "~+end",
  "+Middle+",
  "~+middle+",
  "Café",
  "~café",
  "~cafe",
  "!forbid",
  "Begin",
  "~begin",
  "Begin+",
  "~begin+",
  "End",
  "~end",
  "+End",
  "~+end",
  "+Middle+",
  "~+middle+",
  "Café",
  "~café",
  "~cafe",
  "!forbid",
  "Geschäft",
  "~geschäft",
  "~geschaft",
  "resumé",
  "~resume",
  "Error",
  "~error",
  "Error+",
  "~error+",
  "+error",
  "+error+",
  "Code",
  "~code",
  "Code+",
  "~code+",
  "+code",
  "+code+",
  "msg",
  "+msg",
  "!err",
  "!Errorerror",
  "!Codemsg",
  "Café",
  "~café",
  "~cafe",
  "!codecode",
  ":word:suggestion1,suggestion2",
  "colour-> color",
  "favourite-> favorite",
  "!forbidden:suggested1,suggested2",
  "!forbiddenA:forbidden A, suggestion A",
  "!forbiddenB:use B, suggestion BB",
  "!forbiddenB:use A",
]
`;

exports[`parse suggestions > dictionaryWithSuggestions0 1`] = `
[
  ":word",
  ":word:0:suggestion1",
  ":word:1:suggestion2",
  "colour",
  ":colour",
  ":colour:0:color",
  "favourite",
  ":favourite",
  ":favourite:0:favorite",
  "!forbidden",
  ":forbidden",
  ":forbidden:0:suggested1",
  ":forbidden:1:suggested2",
  "!forbiddenA",
  ":forbiddenA",
  "~:forbiddena",
  ":forbiddenA:0:forbidden A",
  "~:forbiddena:0:forbidden a",
  ":forbiddenA:1:suggestion A",
  "~:forbiddena:1:suggestion a",
  "!forbiddenB",
  ":forbiddenB",
  "~:forbiddenb",
  ":forbiddenB:0:use B",
  "~:forbiddenb:0:use b",
  ":forbiddenB:1:suggestion BB",
  "~:forbiddenb:1:suggestion bb",
  "!forbiddenB",
  ":forbiddenB",
  "~:forbiddenb",
  ":forbiddenB:2:use A",
  "~:forbiddenb:2:use a",
]
`;
